<resources>
    <string name="app_name">MyCommunity</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_to_my_community">Welcome to My Community!</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome">Welcome to My Community</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="choose_your_interests">Choose your interests</string>
    <string name="cuisine">Cuisine</string>
    <string name="music">Music</string>
    <string name="sports">Sports</string>
    <string name="general">General</string>
    <string name="continue_choosing">Continue</string>
    <string name="choose_your_nationality">Choose your communities</string>
    <string name="turkish">Turkish</string>
    <string name="indian">Indian</string>
    <string name="chinese">Chinese</string>
    <string name="pakistani">Pakistani</string>
    <string name="japanese">Japanese</string>
    <string name="send_new_password">Send New Password</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="log_out">Log out</string>
    <string name="food_blog">Food Blog</string>
    <string name="meals">Meals</string>
    <string name="restaurants">Restaurants</string>
    <string name="musics">Musics</string>
</resources>
