<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >
    <group android:checkableBehavior="single">
    <item android:id="@+id/menu_explore" android:title="@string/explore"
        android:icon="@drawable/exploreicon" />

    <item android:id="@+id/menu_profile" android:title="@string/profile"
        android:icon="@drawable/profileicon"/>

    <item android:id="@+id/menu_search" android:title="@string/search"
        android:icon="@drawable/searchicon"/>

    <item android:id="@+id/menu_settings" android:title="@string/settings"
        android:icon="@drawable/settingsicon"/>

    <item android:id="@+id/menu_bookmarked" android:title="@string/bookmarked"
        android:icon="@drawable/bookmarkicon"/>

    <item android:id="@+id/menu_logout" android:title="@string/log_out"
        android:icon="@drawable/logouticon"/>

    </group>
</menu>