<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".LogIn">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:maxWidth="150dp"
        android:maxHeight="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="@id/emailText"/>

    <TextView
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/email"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="#FFF"
        app:layout_constraintBottom_toTopOf="@+id/forgotPasswordLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/emailEditTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableEnd="@drawable/email_icon"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/emailEditTextLogin"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="#FFF"/>

    <EditText
        android:id="@+id/passwordEditTextLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableEnd="@drawable/lock_icon"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/passwordEditTextLogin"
        app:layout_constraintBottom_toTopOf="@id/forgotPasswordLayout"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginEnd="30dp"
            android:background="@drawable/btn_rounded"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="#FFF"/>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="@drawable/btn_rounded"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="#FFF"
            android:onClick="signIn"/>




    </LinearLayout>



    <LinearLayout
        android:id="@+id/forgotPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="#fff"
            android:clickable="true"
            android:onClick="forgotPassword"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>