<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".ChooseCommunity">

    <LinearLayout
        android:id="@+id/chooseNationalityLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="100dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/choose_your_nationality"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="#FFF"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/turkishLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#FFF"
        app:layout_constraintTop_toBottomOf="@id/chooseNationalityLayout">

        <ImageView
            android:id="@+id/turkishSelectedImage"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/turkish_flag"
            android:scaleType="fitCenter"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:layout_marginStart="30dp"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/turkishText"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/turkish"
            android:textColor="#000"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/indianLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#FFF"
        app:layout_constraintTop_toBottomOf="@id/turkishLayout">

        <ImageView
            android:id="@+id/indianSelectedImage"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/indian_flag"
            android:scaleType="fitCenter"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:layout_marginStart="30dp"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/indianText"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/indian"
            android:textColor="#000"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/chineseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#FFF"
        app:layout_constraintTop_toBottomOf="@id/indianLayout">

        <ImageView
            android:id="@+id/chineseSelectedImage"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/chinese_flag"
            android:scaleType="fitCenter"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:layout_marginStart="30dp"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/chineseText"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/chinese"
            android:textColor="#000"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/pakistaniLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#FFF"
        app:layout_constraintTop_toBottomOf="@id/chineseLayout">

        <ImageView
            android:id="@+id/pakistaniSelectedImage"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/pakistani_flag"
            android:scaleType="fitCenter"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:layout_marginStart="30dp"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/pakistaniText"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/pakistani"
            android:textColor="#000"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/japaneseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#FFF"
        app:layout_constraintTop_toBottomOf="@id/pakistaniLayout">

        <ImageView
            android:id="@+id/japaneseSelectedImage"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/japanese_flag"
            android:scaleType="fitCenter"
            android:maxWidth="30dp"
            android:maxHeight="30dp"
            android:layout_marginStart="30dp"
            android:adjustViewBounds="true"/>

        <TextView
            android:id="@+id/japaneseText"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/japanese"
            android:textColor="#000"
            android:textSize="40sp" />

    </LinearLayout>

    <Button
        android:id="@+id/continueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/continue_choosing"
        android:background="@drawable/btn_transparent"
        android:padding="15dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/japaneseLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textColor="#FFF"
        android:drawableEnd="@drawable/arrow_icon"
        android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>